--- a/zcms/WebRoot/resource/admin/css/custom.css
+++ b/zcms/WebRoot/resource/admin/css/custom.css
@@ -53,4 +53,4 @@
 
 #upload_zone{ height:260px;border:1px solid #dddddd;padding-top:10px;overflow:hidden;}
 
-#manageImageArea{ display:none; border:1px solid #dddddd;width:100%;margin-top:15px;}
+#manageImageArea{ display:none; width:100%;margin-top:15px;}
